# stewart_platform_learning

./: .gitignore  LICENSE  README.md
hadi_test/: saved_model.pb
models/: sac_actor_stewart_  (+1 more)
src/stewart_platform/: CMakeLists.txt  package.xml
src/stewart_platform/config/: control_stewart.yaml
src/stewart_platform/launch/: stewart.launch
src/stewart_platform/plugin/: CMakeLists.txt  joint_controller.cc
src/stewart_platform/scripts/: A3C_Continuous_force.py  A3_algorithm_revision.py  A3_algorithm_training.py  DDPG_Continuous.py  DDPG_Continuous_force.py  DDPG_Continuous_revision.py  MBPO_force.py  PILCO_force.py  PPO_Continuous.py  PPO_Continuous_force.py  PPO_Continuous_revision.py  convert_shapes.py  reach_pose_env_force.py  reaching_pose_env.py  reaching_pose_env_force.py  reward_test.py  robot_env_test.py  runs_algorithm.bash  stewart_env_force.py  task_env_test.py  test_pilco.ipynb
src/stewart_platform/scripts/MBPO/: MBPO_main.py  args.py  predict_env.py  sample_env.py
src/stewart_platform/scripts/MBPO/tf_models/: bnn.py  constructor.py  fake_env.py  fc.py  sac.py  tf_logging.py  utils.py
src/stewart_platform/scripts/MBPO/tf_models/sac_pytorch/: model.py  replay_memory.py
src/stewart_platform/scripts/PILCO/: controllers.py  rewards.py  utils.py
src/stewart_platform/scripts/PILCO/models/: mgpr.py  pilco.py  smgpr.py
src/stewart_platform/src/: ik.cpp
src/stewart_platform/stewart_sdf_model/: README.md  model.config  piston_balls_pose.py  sdf_generator.py  stewart_sdf.sdf  stewart_sdf_generator.py
src/stewart_platform/world/: stewart.world
(+45 files in other folders)
